--- a/app/views/currency/admin.html.slim
+++ b/app/views/currency/admin.html.slim
@@ -1,7 +1,10 @@
+/** @jsx React.DOM */
 .row
   .col-md-4
   .col-md-4
     h1.h1 Admin Currency
+    
+    = react_component 'CurrencyInput'
   .col-md-4
 .row
   .col-md-4
