--- a/app/views/currency/admin.html.slim
+++ b/app/views/currency/admin.html.slim
@@ -3,14 +3,14 @@
   .col-md-4
     h1.h1 Admin Currency
     
-    = react_component 'CurrencyInput'
-  .col-md-4
-.row
-  .col-md-4
-  .col-md-4
-    h2.h2 Currencies
-.row
-  .col-md-4
-  .col-md-4
-    = react_component 'Currencies', { currency_list: @currency_list }
+    = react_component 'AdminContainer', currency_list: @currency_list
+/   .col-md-4
+/ .row
+/   .col-md-4
+/   .col-md-4
+/     h2.h2 Currencies
+/ .row
+/   .col-md-4
+/   .col-md-4
+/     = react_component 'Currencies', { currency_list: @currency_list }
 
