Two way binding! Js code is refactored.

--- a/app/views/currency/admin.html.slim
+++ b/app/views/currency/admin.html.slim
@@ -3,7 +3,7 @@
   .col-md-4
     h1.h1 Admin Currency
     
-    = react_component 'AdminContainer', currency_list: @currency_list
+    = react_component 'CurrensyList', currency_list: @currency_list
 /   .col-md-4
 / .row
 /   .col-md-4
