Rails 5 migration. Currency render. Action cable first steps

--- a/app/views/currency/index.html.slim
+++ b/app/views/currency/index.html.slim
@@ -3,6 +3,7 @@ h1 Currency
 
 .row
   .col-md-6
-  .col-md-4 data-react-class="Currency" data-react-props="{}"
+  .col-md-4
+    = react_component 'Currency', currency: @currency
 
 
