--- a/app/views/currency/index.html.slim
+++ b/app/views/currency/index.html.slim
@@ -1,9 +1,10 @@
-.col-md-6
-h1 Currency
+.row
+  .col-md-6
+  .col-md-4
+    h1.h1 Currency
 
 .row
   .col-md-6
   .col-md-4
     = react_component 'Currency', currency: @currency
-
 
